; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/PicoDrive/cpu/extr_debug.c_do_continue.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/PicoDrive/cpu/extr_debug.c_do_continue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pdb_cpu = type { i32 }

@CMDRET_CONT_DO_NEXT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.pdb_cpu*, i8*)* @do_continue to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @do_continue(%struct.pdb_cpu* %0, i8* %1) #0 {
  %3 = alloca %struct.pdb_cpu*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca [32 x i8], align 16
  store %struct.pdb_cpu* %0, %struct.pdb_cpu** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = getelementptr inbounds [32 x i8], [32 x i8]* %5, i64 0, i64 0
  %7 = load i8*, i8** %4, align 8
  %8 = call i64 @get_arg(i8* %6, i32 32, i8* %7)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %15

10:                                               ; preds = %2
  %11 = getelementptr inbounds [32 x i8], [32 x i8]* %5, i64 0, i64 0
  %12 = call i32 @atoi(i8* %11)
  %13 = load %struct.pdb_cpu*, %struct.pdb_cpu** %3, align 8
  %14 = getelementptr inbounds %struct.pdb_cpu, %struct.pdb_cpu* %13, i32 0, i32 0
  store i32 %12, i32* %14, align 4
  br label %15

15:                                               ; preds = %10, %2
  %16 = load i32, i32* @CMDRET_CONT_DO_NEXT, align 4
  ret i32 %16
}

declare dso_local i64 @get_arg(i8*, i32, i8*) #1

declare dso_local i32 @atoi(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
